    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
 1-Mar-2004
 Problems fixed:
    1. ServletUnit now applies character encoding in interpreting post parameters

26-Feb-2004
Additions:
    1. Added support for filters

14-Feb-2004
Additions:
    1. Added support for ServletContextAttributeListener and HttpSessionAttributeListener

12-Feb-2004
Acknowledgements:
    Thanks to Jarom Smith for finding some typos in the tutorial.
    Thanks to Jay Dunning for providing an implementation of HttpServletResponse.containsHeader
                          and implementing support for ServletContextListeners.

Problems fixed:
    1. Window.open() using an empty name was replacing the main window rather than creating a new one.
    2. bug #883293 - typos in tutorial task 1 step 4
    3. bug #883301 - more typos in tutorial task 1 step 4
    4. bug #873169 - Cookie headers were generated with no space after the semicolon (unlike IE, Netscape, and Mozilla)
    5. Cookie domains without leading dots are now accepted, as per RFC 2965.

Additions:
    1. Patch #890995 - Implemented ServletUnitHttpResponse.containsHeader
    2. Patch #890936 - Added ServletContextListener support
    3. Added HttpSessionListener support

 4-Dec-2003
Acknowledgements:
    Thanks to Andrew Bickerton for adding the following JavaScript support:
        Form.length          - returns the number of controls in a form
        Control.type         - returns a test description of the control type
        Control.defaultValue - returns the default value for text controls
        Initial page tokenizing now skips JavaScript while looking for header tags